--- a/Models/SpeechRepresentation/2021.06.14_HuBERT.md
+++ b/Models/SpeechRepresentation/2021.06.14_HuBERT.md
@@ -90,17 +90,17 @@ Firstly, the presence of multiple sounds in each input utterance breaks the inst
 Secondly, during pre-training, there is no prior lexicon of discrete sound units available, as in NLP applications in which words or word pieces are used, hindering the use of predictive losses.
 Lastly, the boundaries between sound units are not known, which complicates masked prediction pre-training.
 
-In this paper, we introduce \textbf{H}idden \textbf{u}nit \textbf{BERT} (HuBERT) that benefits from an offline clustering step to generate noisy labels for a BERT-like per-training.
+In this paper, we introduce ***Hidden unit BERT (HuBERT)*** that benefits from an offline clustering step to generate noisy labels for a BERT-like per-training.
 Concretely, a BERT model consumes masked continuous speech features to predict pre-determined cluster assignments.
 The predictive loss is only applied over the masked regions, forcing the model to learn good high-level representations of unmasked inputs to infer the targets of masked ones correctly.
-Intuitively, the HuBERT model is forced to learn both acoustic and language models from continuous inputs.
+Intuitively, the ***HuBERT*** model is forced to learn both acoustic and language models from continuous inputs.
 First, the model needs to model unmasked inputs into meaningful continuous latent representations, which maps to the classical acoustic modeling problem.
 Second, to reduce the prediction error, the model needs to capture the long-range temporal relations between learned representations.
 One crucial insight motivating this work is the importance of consistency of the targets, not just their correctness, which enables the model to focus on modeling the sequential structure of input data.
-Our approach draws inspiration from the DeepCluster method for self-supervised visual learning \cite{caron2018deep}; however, HuBERT benefits from the masked prediction loss over speech sequences to represent their sequential structure.
+Our approach draws inspiration from the DeepCluster method for self-supervised visual learning \cite{caron2018deep}; however, ***HuBERT*** benefits from the masked prediction loss over speech sequences to represent their sequential structure.
 
-When the HuBERT model is pre-trained on either the standard Librispeech 960h \cite{panayotov2015librispeech} or the Libri-Light 60k hours \cite{kahn2020libri}, it either matches or improves upon the state-of-the-art wav2vec 2.0 \cite{baevski2020wav2vec} performance on all fine-tuning subsets of 10mins, 1h, 10h, 100h, and 960h.
-We present systematic results on three model sizes pre-trained with HuBERT: \textsc{Base} (90M parameters), \textsc{Large} (300M), and \textsc{X-Large} (1B).
+When the ***HuBERT*** model is pre-trained on either the standard Librispeech 960h \cite{panayotov2015librispeech} or the Libri-Light 60k hours \cite{kahn2020libri}, it either matches or improves upon the state-of-the-art wav2vec 2.0 \cite{baevski2020wav2vec} performance on all fine-tuning subsets of 10mins, 1h, 10h, 100h, and 960h.
+We present systematic results on three model sizes pre-trained with ***HuBERT***: \textsc{Base} (90M parameters), \textsc{Large} (300M), and \textsc{X-Large} (1B).
 The \textsc{X-Large} model shows up to 19\% and 13\% relative WER improvement from \textsc{Large} models on dev-other and test-other evaluation subsets when pre-trained on the Libri-Light 60k hours.
 
 ## 2·Related Works: 相关工作
@@ -115,19 +115,19 @@ Some models combine both the predictive and the contrastive losses \cite{baevski
 These objectives can usually be interpreted as mutual information maximization~\cite{tsai2020ssl_multi}.
 Other objectives do not belong to these categories, for example, \cite{pascual2019learning}.
 
-This work is most related to DiscreteBERT~\cite{baevski2019effectiveness}: both HuBERT and DiscreteBERT predict discrete targets of masked regions.
+This work is most related to DiscreteBERT~\cite{baevski2019effectiveness}: both ***HuBERT*** and DiscreteBERT predict discrete targets of masked regions.
 However, there are several crucial differences.
-First, instead of taking quantized units as input, HuBERT takes raw waveforms as input to pass as much information as possible to the transformer layers, which was shown to be important in \cite{baevski2020wav2vec}.
+First, instead of taking quantized units as input, ***HuBERT*** takes raw waveforms as input to pass as much information as possible to the transformer layers, which was shown to be important in \cite{baevski2020wav2vec}.
 Furthermore, in the experiment section, we show that our model, with simple k-means targets, can achieve better performance than DiscreteBERT that uses vq-wav2vec \cite{baevski2019vq} learned units.
 Second, we also present many techniques to improve teacher quality instead of using a single fixed teacher as done in DiscreteBERT.
 
-HuBERT is also related to wav2vec 2.0~\cite{baevski2020wav2vec}.
+***HuBERT*** is also related to wav2vec 2.0~\cite{baevski2020wav2vec}.
 However, the latter employs a contrastive loss that requires careful design of where to sample negative frames from, an auxiliary diversity loss to encourage the discrete unit usage, and demands a proper Gumbel-softmax temperature annealing schedule.
 In addition, it only explores quantizing the waveform encoder output, which may not be the best feature for quantization due to the limited capacity of the convolutional encoder, as suggested by our ablation studies in Figure~\ref{fig:qual_layer}.
 Concretely, our proposed method adopts a more direct predictive loss by separating the acoustic unit discovery step from the masked prediction representation learning phase and achieves the state-of-the-art results that match or outperform wav2vec 2.0 on different fine-tuning scales.
 
 Finally, the idea of iterative refinement target labels is similar to iterative pseudo labeling for semi-supervised ASR~\cite{xu2020iterative, likhomanenko2020slimipl}, which leverages an improving student model to generate better pseudo-labels for the next iteration of training.
-The HuBERT approach can be seen as extending this method to the self-supervised setup with a masked prediction loss.
+The ***HuBERT*** approach can be seen as extending this method to the self-supervised setup with a masked prediction loss.
 
 ## 3·Methodology: 方法
 
@@ -194,7 +194,7 @@ The learning process then proceeds with the newly discovered units.
 ### Implementation
 
 Our pre-trained models follows the wav2vec 2.0 architecture~\cite{baevski2020wav2vec}, with a convolutional waveform encoder, a BERT encoder~\cite{devlin2018bert}, a projection layer and a code embedding layer.
-We consider HuBERT in three different configurations: \textsc{Base}, \textsc{Large}, and \textsc{X-Large}.
+We consider ***HuBERT*** in three different configurations: \textsc{Base}, \textsc{Large}, and \textsc{X-Large}.
 The fisrt two follow the architectures of wav2vec 2.0 \textsc{Base} and \textsc{Large} closely.
 The \textsc{X-Large} architecture expands the model size to about 1 billion parameters, similar to the size of the Conformer XXL model in ~\cite{zhang2020pushing}.
 The waveform encoder is identical for all the three configurations, which is composed of seven 512-channel layers with strides `[5,2,2,2,2,2,2]` and kernel widths `[10,3,3,3,3,2,2]`.
@@ -212,7 +212,7 @@ $$
 where $A$ is the projection matrix, $e_c$ is the embedding for codeword $c$, $\text{sim}(\cdot, \cdot)$ computes the cosine similarity between two vectors, and $\tau$ scales the logit, which is set to 0.1.
 When cluster ensembles are used, one projection matrix $A^{(k)}$ is applied for each clustering model $k$.
 
-After HuBERT pre-training, We use the connectionist temporal classification (CTC)~\cite{graves2006connectionist} loss for ASR fine-tuning of the whole model weights except the convolutional audio encoder, which remains frozen.
+After ***HuBERT*** pre-training, We use the connectionist temporal classification (CTC)~\cite{graves2006connectionist} loss for ASR fine-tuning of the whole model weights except the convolutional audio encoder, which remains frozen.
 The projection layer(s) is removed and replaced with a randomly initialized softmax layer.
 The CTC target vocabulary includes 26 English characters, a space token, an apostrophe, and a special CTC blank symbol.
 
@@ -228,10 +228,10 @@ The three Libri-light splits are subsets of the the LibriSpeech training split, 
 
 To demonstrate the effectiveness of the proposed method on utilizing low-quality cluster assignments, we consider the k-means algorithm~\cite{lloyd1982least} for acoustic unit discovery by default.
 It is one of the most naive unit discovery models that can be treated as modeling an isotropic Gaussian with the same scalar variance for each acoustic unit.
-To generate labels for the first iteration HuBERT training over the 960 hour LibriSpeech training set, we run k-means clustering with 100 clusters on 39-dimensional MFCC features, which are 13 coefficients with the first and the second-order derivatives.
+To generate labels for the first iteration ***HuBERT*** training over the 960 hour LibriSpeech training set, we run k-means clustering with 100 clusters on 39-dimensional MFCC features, which are 13 coefficients with the first and the second-order derivatives.
 
-To generate better targets for the subsequent iterations, we run k-means clustering with 500 clusters on the latent features extracted from the HuBERT model pre-trained in the previous iteration (not fine-tuned) at some intermediate transformer layer.
-Since the feature dimension at the transformer output is much higher than the MFCC features (768-D for HuBERT \textsc{Base}), we cannot afford to load the entire 960 hour training split to the memory.
+To generate better targets for the subsequent iterations, we run k-means clustering with 500 clusters on the latent features extracted from the ***HuBERT*** model pre-trained in the previous iteration (not fine-tuned) at some intermediate transformer layer.
+Since the feature dimension at the transformer output is much higher than the MFCC features (768-D for ***HuBERT*** \textsc{Base}), we cannot afford to load the entire 960 hour training split to the memory.
 So instead, we randomly sample 10\% of the data for fitting the k-means model.
 
 The \texttt{MiniBatchKMeans} algorithm implemented in the \texttt{scikit-learn} \cite{pedregosa2011scikit} package is used for clustering, which fits a mini-batch of samples at a time.\footnote{It still requires loading the entire dataset to the memory first.} We set the mini-batch size to be 10,000 frames.
@@ -243,12 +243,12 @@ We train the \textsc{Base} model for two iterations on the 960 hours of LibriSpe
 The first iteration is trained for 250k steps, while the second iteration is trained for 400k steps using labels generated by clustering the 6-th transformer layer output of the first iteration model.
 Training for 100k steps takes about 9.5 hours.
 
-Next we train HuBERT \textsc{Large} and \textsc{X-Large} for one iteration on 60,000 hours of Libri-light audio on 128 and 256 GPUs, respectively, for 400k steps.
+Next we train ***HuBERT*** \textsc{Large} and \textsc{X-Large} for one iteration on 60,000 hours of Libri-light audio on 128 and 256 GPUs, respectively, for 400k steps.
 The batch sizes are reduced to 56.25 and 22.5 seconds of audio per GPU due to memory constraints.
-Instead of restarting the iterative process from clustering MFCC features, we extract features from the 9-th transformer layer of the second iteration \textsc{Base} HuBERT for clustering and use those labels for training these two models.
+Instead of restarting the iterative process from clustering MFCC features, we extract features from the 9-th transformer layer of the second iteration \textsc{Base} ***HuBERT*** for clustering and use those labels for training these two models.
 Hence, these two models can also be seen as the third iteration models.
 
-For all HuBERT configurations, mask span is set to $l=10$, and $p=8\%$ of the waveform encoder output frames are randomly selected as mask start if not otherwise mentioned.
+For all ***HuBERT*** configurations, mask span is set to $l=10$, and $p=8\%$ of the waveform encoder output frames are randomly selected as mask start if not otherwise mentioned.
 Adam~\cite{kingma2014adam} optimizer is used with $\beta = (0.9, 0.98)$, and the learning rate ramps up linearly from 0 to the peak learning rate for the first 8\% of the training steps, and then decays linearly back to zero.
 The peak learning rates are 5e-4/1.5e-3/3e-3 for \textsc{Base}/\textsc{Large}/\textsc{X-Large} models.
 
@@ -341,31 +341,31 @@ Higher PNMI also indicates better k-means clustering quality.
 ### Main Results: Low- and High-Resource Setups
 
 Table~\ref{tab:main_lo} presents results for the low-resource setup, where pre-trained models are fine-tuned on 10 minutes, 1 hour, 10 hours, or 100 hours of labeled data. We include comparison with semi-supervised (iterative pseudo labeling (IPL)~\cite{xu2020iterative}, slimIPL~\cite{likhomanenko2020slimipl}, noisy student~\cite{park2020improved}) and self-supervised approaches (DeCoAR 2.0~\cite{ling2020decoar}, DiscreteBERT~\cite{baevski2019effectiveness}, wav2vec 2.0~\cite{baevski2020wav2vec}) in the literature.
-Increasing the amount of unlabeled data and increasing the model size improve performance, demonstrating the scalability of the proposed HuBERT self-supervised pre-training method.
-In the ultra-low resource setup with just 10 minutes of labeled data, the HuBERT \textsc{Large} model can achieve a WER of 4.7\% on the test-clean set and 7.6\% on the test-other set, which is 0.1\% and 0.6\% WER lower, respectively than the state-of-the-art wav2vec 2.0 \textsc{Large} model. By further scaling up the model size to 1B parameters, the HuBERT \textsc{X-Large} model can further reduce the WER to 4.6\% and 6.8\% on test-clean and test-other. The superiority of HuBERT persists across setups with different amounts of labeled data, with the only exceptions being fine-tuning on 100 hours of labeled data, where HuBERT \textsc{Large} is 0.1\% WER higher than wav2vec 2.0 \textsc{Large} on test-clean, and HuBERT \textsc{Base} is 0.1\% WER higher than wav2vec 2.0 \textsc{Base} on test-other.
-In addition, HuBERT also outperforms DiscreteBERT by a large margin in all setups, while both are trained with a virtually identical objective - masked prediction of discovered units. The considerable performance gap suggests two things. First, using waveform as the input to the model is crucial for avoiding loss of information during quantization. Second, while vq-wav2vec~\cite{baevski2019vq}, the units that DiscreteBERT uses for training, may discover better units than k-means clustering of MFCC features, the proposed iterative refinement benefits from the improving HuBERT model and learn better units eventually. We will verify these statements in the ablation study sections.
+Increasing the amount of unlabeled data and increasing the model size improve performance, demonstrating the scalability of the proposed ***HuBERT*** self-supervised pre-training method.
+In the ultra-low resource setup with just 10 minutes of labeled data, the ***HuBERT*** \textsc{Large} model can achieve a WER of 4.7\% on the test-clean set and 7.6\% on the test-other set, which is 0.1\% and 0.6\% WER lower, respectively than the state-of-the-art wav2vec 2.0 \textsc{Large} model. By further scaling up the model size to 1B parameters, the ***HuBERT*** \textsc{X-Large} model can further reduce the WER to 4.6\% and 6.8\% on test-clean and test-other. The superiority of ***HuBERT*** persists across setups with different amounts of labeled data, with the only exceptions being fine-tuning on 100 hours of labeled data, where ***HuBERT*** \textsc{Large} is 0.1\% WER higher than wav2vec 2.0 \textsc{Large} on test-clean, and ***HuBERT*** \textsc{Base} is 0.1\% WER higher than wav2vec 2.0 \textsc{Base} on test-other.
+In addition, ***HuBERT*** also outperforms DiscreteBERT by a large margin in all setups, while both are trained with a virtually identical objective - masked prediction of discovered units. The considerable performance gap suggests two things. First, using waveform as the input to the model is crucial for avoiding loss of information during quantization. Second, while vq-wav2vec~\cite{baevski2019vq}, the units that DiscreteBERT uses for training, may discover better units than k-means clustering of MFCC features, the proposed iterative refinement benefits from the improving ***HuBERT*** model and learn better units eventually. We will verify these statements in the ablation study sections.
 
-We report results of fine-tuning HuBERT models on the full 960 hours of Librispeech data and compare with the literature in Table~\ref{tab:main_hi}. Prior studies using additional unpaired speech are classified into:
+We report results of fine-tuning ***HuBERT*** models on the full 960 hours of Librispeech data and compare with the literature in Table~\ref{tab:main_hi}. Prior studies using additional unpaired speech are classified into:
 
 - self-training: first train an ASR on labeled data to annotate unlabeled speech, and then combine both golden and ASR-annotated text-speech pairs for supervised training.
 - pre-training: first use unlabeled speech for pre-training a model, and then fine-tune the model on labeled data with a supervised training objective.
 - pre-training + self-training: first pre-train and fine-tune a model, and then use it to annotate unlabeled speech for self-training combined with supervised data.
 
-HuBERT outperforms the state-of-the-art supervised and self-training methods and is on par with the two best pre-training results in the literature; both are based on wav2vec 2.0 contrastive learning.
-In contrast, it lags behind methods combining pre-training with self-training. However, as observed in \cite{xu2020self} and \cite{zhang2020pushing}, we expect that HuBERT can achieve comparable or better performance after combining with self-training, since the pre-trained HuBERT model is on par or better than the pre-trained model those two methods use for pseudo labeling.
+***HuBERT*** outperforms the state-of-the-art supervised and self-training methods and is on par with the two best pre-training results in the literature; both are based on wav2vec 2.0 contrastive learning.
+In contrast, it lags behind methods combining pre-training with self-training. However, as observed in \cite{xu2020self} and \cite{zhang2020pushing}, we expect that ***HuBERT*** can achieve comparable or better performance after combining with self-training, since the pre-trained ***HuBERT*** model is on par or better than the pre-trained model those two methods use for pseudo labeling.
 
 ### Analysis: K-Means Stability
 
 To better understand why masked prediction of discovered units is effective, we conduct a series of analyses and ablation studies. We start with probing the stability of the k-means clustering algorithm concerning different numbers of clusters and different sizes of its training data.
-Two features are considered: 39-dimensional MFCC features and 768-dimensional output from the 6-th transformer layer of the first iteration HuBERT-\textsc{Base} model. These two features are used to produce cluster assignments for the first and the second iteration HUBERT training, respectively.
+Two features are considered: 39-dimensional MFCC features and 768-dimensional output from the 6-th transformer layer of the first iteration ***HuBERT***-\textsc{Base} model. These two features are used to produce cluster assignments for the first and the second iteration ***HuBERT*** training, respectively.
 
 For k-means clustering, we consider $K=\{100,500\}$ clusters fitted on \{1, 10, 100\} hours of speech sampled from the LibriSpeech training split. Each combination of the hyperparameters and the features are trained for 10 trials, and the mean and standard deviation of the supervised PNMI metric on the development set (combining dev-clean and dev-other from LibriSpeech) is reported in Table~\ref{tab:stability}.
-The results show that the k-means clustering is reasonably stable given the small standard deviations across different hyperparameters and features. Furthermore, increasing the amount of data used for fitting k-means models improves PNMI in general, but the gain is only as much as 0.012, suggesting the feasibility of using k-means for unit discovery even with limited CPU memory relative to the feature matrix size. Lastly, the PNMI score is much higher when clustering on HuBERT features than clustering on MFCC features, and the gap is even larger with 500 clusters, indicating that iterative refinement significantly improves the clustering quality.
+The results show that the k-means clustering is reasonably stable given the small standard deviations across different hyperparameters and features. Furthermore, increasing the amount of data used for fitting k-means models improves PNMI in general, but the gain is only as much as 0.012, suggesting the feasibility of using k-means for unit discovery even with limited CPU memory relative to the feature matrix size. Lastly, the PNMI score is much higher when clustering on ***HuBERT*** features than clustering on MFCC features, and the gap is even larger with 500 clusters, indicating that iterative refinement significantly improves the clustering quality.
 
 ### Analysis: Clustering Quality Across Layers and Iterations
 
-We next study how each layer of the HuBERT model from each iteration performs when used for clustering to generate training targets.
-The two \textsc{Base} HuBERT models from the first two iterations as described in Section~\ref{sec:pretrain} are considered, which are referred to as \textsc{Base}-it1 and \textsc{Base}-it2, respectively. There are 26 features representing 12 transformer layers plus the input to the first transformer layer (denoted as ``Layer 0'') from the two HuBERT models.
+We next study how each layer of the ***HuBERT*** model from each iteration performs when used for clustering to generate training targets.
+The two \textsc{Base} ***HuBERT*** models from the first two iterations as described in Section~\ref{sec:pretrain} are considered, which are referred to as \textsc{Base}-it1 and \textsc{Base}-it2, respectively. There are 26 features representing 12 transformer layers plus the input to the first transformer layer (denoted as ``Layer 0'') from the two ***HuBERT*** models.
 For each feature, we fit three k-means models ($K=\{100, 500, 1000\}$ clusters) on a 100 hour subset randomly sampled from the LibriSpeech training data. The teacher quality measured in cluster purity, phone purity, and phone normalized mutual information (PNMI) is shown in Figure~\ref{fig:qual_layer}.
 As a baseline, MFCC achieves (cluster purity, phone purity, PNMI) = (0.099, 0.335, 0.255) for $K=100$ and (0.031, 0.356, 0.287) for $K=500$.
 
@@ -378,7 +378,7 @@ We present a series of ablation studies in the following sections to learn how p
 The models for ablation studies are pre-trained for 100k steps and fine-tuned on the 10-hour libri-light split using fixed hyperaprameters. MFCC-based k-means units with C=100 are used if not otherwise mentioned. We report WERs on the dev-other set decoded with the $n$-gram language model using fixed decoding hyperparameters.
 
 To understand the importance of our proposal to predict the masked frames only, we compare three conditions: 1) predicting masked frames, 2) predicting all frames, and 3) predicting unmasked frames, which can be simulated by setting $\alpha$ to 1.0, 0.5, and 0.0, respectively.
-We are comparing three k-means models learned from clustering MFCC teachers with 50, 100, 500 clusters, one learned from clustering HuBERT-\textsc{Base}-it1 6th transformer layer features, and supervised labels obtained from the forced-alignment of character-based HMM models (chenone)~\cite{le2019senones}.
+We are comparing three k-means models learned from clustering MFCC teachers with 50, 100, 500 clusters, one learned from clustering ***HuBERT***-\textsc{Base}-it1 6th transformer layer features, and supervised labels obtained from the forced-alignment of character-based HMM models (chenone)~\cite{le2019senones}.
 
 Results shown in Table~\ref{tab:loss} indicate that when learning from bad cluster assignments, computing loss only from the masked regions achieves the best performance, while the inclusion of unmasked loss results in significantly higher WERs.
 However, as the clustering quality improves, the model would suffer less when computing losses on the unmasked frames (\textsc{Base}-it1-layer6) or even achieve better performance as the case of chenone.
@@ -390,14 +390,14 @@ By comparing the results from Table~\ref{tab:loss} and Table~\ref{tab:ens}, it i
 
 ### Ablation: Impact of Hyperparameters
 
-Figure~\ref{fig:prob_bs} and Table~\ref{tab:step} studies how hyperparameters affect HuBERT pre-training.
+Figure~\ref{fig:prob_bs} and Table~\ref{tab:step} studies how hyperparameters affect ***HuBERT*** pre-training.
 It is shown that
 
 - the portion of frames selected as mask start is optimal at $p=$8\%;
 - increasing the batch size can significantly improve the performance; % (20\% WER reduction when increasing the batch size by 8 times);
 - training for longer consistently helps for both k-means models with C=\{50, 100\}, and the best model achieves a WER of 11.68\%.
 
-These findings are also consistent with those from BERT-like models~\cite{clark2020electra}. In addition, we include a comparable result from DiscreteBERT~\cite{baevski2019effectiveness} in Table~\ref{tab:step} which applies k-means to quantize the same MFCC features into 13.5k units, used as both the output and the \textit{input} to the BERT model. Besides using continuous speech input rather than discrete units, We hypothesize that HuBERT achieves significantly better performance because its fewer k-means clusters of 100 or 500 help capture broad phonetic concepts without delving into inter/intra-speaker variation.
+These findings are also consistent with those from BERT-like models~\cite{clark2020electra}. In addition, we include a comparable result from DiscreteBERT~\cite{baevski2019effectiveness} in Table~\ref{tab:step} which applies k-means to quantize the same MFCC features into 13.5k units, used as both the output and the \textit{input} to the BERT model. Besides using continuous speech input rather than discrete units, We hypothesize that ***HuBERT*** achieves significantly better performance because its fewer k-means clusters of 100 or 500 help capture broad phonetic concepts without delving into inter/intra-speaker variation.
 
 ## 6·Conclusions: 结论
 
@@ -420,3 +420,5 @@ Furthermore, given the high quality of its representations, we will consider usi
 最后, ***HuBERT*** 适用于 1B 变压器模型, 显示了 WER 的相对减少在 test-other 子集上最多 13%.
 为了未来的工作, 我们计划改进 ***HuBERT*** 训练过程, 使其包含单个阶段.
 此外, 由于其高质量的表示, 我们将考虑使用 ***HuBERT*** 预训练表示来进行多任务的语音识别和生成.
+
+## Reference: 参考文献
