add FireRedASR 方法

--- a/Models/ASR/2025.01.24_FireRedASR.md
+++ b/Models/ASR/2025.01.24_FireRedASR.md
@@ -76,8 +76,43 @@ Section 5 concludes the report.
 
 ## 3·Methodology: 方法
 
-## 4·Experiments: 实验
+In this section, we present the architectural details and methodologies for our two ASR models: FireRedASR-AED and FireRedASR-LLM. FireRedASR-AED follows the conventional Attention-based Encoder-Decoder architecture, whereas FireRedASR-LLM is built on the Encoder-Adapter-LLM architecture that leverages the power of LLM for ASR. Both models share similar input feature processing and acoustic encoding strategies but differ in their approaches to token sequence modeling.
 
-## 5·Results: 结果
+### FireRedASR-AED: Attention-based Encoder-Decoder ASR model
+
+FireRedASR-AED adopts an end-to-end architecture that combines a Conformer-based Encoder (Enc) with a Transformer-based Decoder (Dec)\cite{gulati2020conformer,vaswani2017attention}. This design choice leverages both the ability of Conformer to model local and global dependencies in speech features and the effectiveness of Transformer in sequence transduction. The overall architecture of FireRedASR-AED is illustrated in Figure \ref{img:llm_asr} (bottom right).
+
+**Training Data**: The training corpus consists of approximately 70,000 hours of audio data, predominantly high-quality Mandarin Chinese speech. Unlike weakly-labeled datasets used in Whisper, the majority of our data was manually transcribed by professional annotators, ensuring high transcription accuracy and reliability. The dataset also incorporates approximately 11,000 hours of English speech data to enhance English ASR capabilities.
+
+**Input Features**: The input features are 80-dimensional log Mel filterbank (Fbank) extracted from 25ms windows with 10ms frame shifts, followed by global mean and variance normalization.
+
+**Encoder Structure**: The encoder consists of two main components: a subsampling module and a stack of Conformer blocks. The subsampling module employs two sequential convolutional layers, each with a stride of 2 and a kernel size of 3, followed by ReLU activation functions. This configuration reduces the temporal resolution from 10ms to 40ms per frame, effectively managing computational complexity while preserving essential acoustic information.
+The subsampled features are then processed by a stack of Conformer blocks. Each Conformer block consists of four primary components: two Macaron-style feedforward modules positioned at the beginning and end of the block, a multi-head self-attention module incorporating relative positional encoding \cite{dai2019transformer}, and a convolution module equipped with gated linear unit (GLU) and layer normalization. The kernel size for all 1-D depthwise convolution is set to 33. This structure enables effective modeling of both local and global dependencies in the speech signal, while maintaining computational efficiency.
+
+**Decoder Structure**: The decoder follows a standard Transformer architecture with several key design choices. It adopts fixed sinusoidal positional encodings and employs weight tying between input and output token embeddings to reduce model complexity. Each Transformer block consists of three primary components: a multi-head self-attention module, a multi-head cross-attention module, and a position-wise feedforward module, all utilizing pre-norm residual units to enhance training stability and gradient flow.
+
+**Tokenization**: We employ a mixed tokenization strategy: Chinese characters for Chinese text and token-level byte-pair encoding (BPE) \cite{sennrich2015neural} for English text. The total vocabulary size is 7,832, comprising 1,000 English BPE tokens, 6,827 Chinese characters, and 5 special tokens.
+
+We investigated various sizes of FireRedASR-AED, with detailed architectural configurations presented in Table \ref{tab:model_config}, where `\#Params` denotes the number of parameters. Unless otherwise specified, FireRedASR-AED refers to FireRedASR-AED-L.
+
+### FireRedASR-LLM: Encoder-Adapter-LLM-based ASR model
+
+FireRedASR-LLM is also an end-to-end ASR model but designed to integrate robust speech processing capabilities of FireRedASR-AED with the superior language capabilities of LLM. It comprises three core components: a Conformer-based audio Encoder, a lightweight audio-text alignment Adapter and a pre-trained text-based LLM, forming what we term the Encoder-Adapter-LLM architecture. The overall architecture of FireRedASR-LLM is illustrated in Figure \ref{img:llm_asr} (left).
+
+**Input Features and Encoder**: FireRedASR-LLM employs the same training data, input features and processing methods as FireRedASR-AED. The encoder of FireRedASR-LLM is initialized with pre-trained weights from Encoder of FireRedASR-AED. This encoder generates continuous representations that encapsulate both acoustic and semantic characteristics of the input speech.
+
+**Adapter Structure and Functionality**: To seamlessly integrate the audio encoder with the text-based LLM, an adapter network is employed. This adapter transforms the output of encoder into the semantic space of the LLM, enabling the LLM to accurately recognize the corresponding text content from the input speech. The adapter consists of a simple but effective Linear-ReLU-Linear network, which projects the output dimension of encoder to match the input embedding dimension of the LLM.
+Even after temporal subsampling from 10ms to 40ms, the output of the encoder remains too lengthy for the LLM to process efficiently. Therefore, we incorporate an additional frame splicing operation at the beginning of the adapter. This operation further reduces the temporal resolution from 40ms to 80ms per frame, thereby decreasing sequence length and improving the computational efficiency for the LLM.
+
+**LLM Initialization and Processing**: The LLM component of FireRedASR-LLM is initialized with pre-trained weights from Qwen2-7B-Instruct \cite{qwen2}, a notable open-source LLM.
+During training, the input of FireRedASR-LLM consists of a triplet: (prompt, speech, transcript). The encoder and adapter produces a speech embedding ${E}_{S}$, while the prompt and transcript are tokenized and embedded by the LLM into prompt embedding ${E}_{P}$ and transcript embedding ${E}_{T}$. These embeddings are concatenated as $({E}_{P}, {E}_{S}, {E}_{T})$ and processed by the subsequent layers of LLM.
+During inference, the input is reduced to $({E}_{P},{E}_{S})$, enabling the LLM to execute next-token-prediction and generate recognized text from speech.
+
+**Training Strategy**: We employ a carefully designed training strategy that balances adaptation and preservation of pre-trained capabilities: the encoder and adapter are fully trainable, while the majority of LLM parameters remain fixed. We incorporate trainable LLM Low-Rank Adaptation (LoRA) \cite{hu2021lora} to efficiently fine-tune the LLM. This strategy ensures that the encoder and adapter are adequately trained to map speech features into the semantic space of LLM, while preserving its pre-trained capabilities.
+The training objective is based on cross-entropy loss, with the loss computed only over the transcript portion of the input, ignoring the prompt and speech embeddings.
+
+We investigated various sizes of FireRedASR-LLM, with detailed architectural configurations presented in Table \ref{tab:model_config}. Unless otherwise specified, FireRedASR-LLM refers to FireRedASR-LLM-L.
+
+## 4·Experiments & 5·Results: 实验 & 结果
 
 ## 6·Conclusions: 结论
