新增 FireRedASR 讨论

--- a/Models/ASR/2025.01.24_FireRedASR.md
+++ b/Models/ASR/2025.01.24_FireRedASR.md
@@ -207,4 +207,27 @@ For English speech recognition, we evaluate our models on the widely-adopted Lib
 Whisper-Large-v3, a popular open-source multilingual ASR model trained on 5 million hours of audio data, achieves WERs of 1.82\% and 3.50\% on test-clean and test-other respectively, as reported in \cite{an2024funaudiollm}.
 Our models demonstrate competitive performance: FireRedASR-LLM achieves WERs of 1.73\% and 3.67\%, while FireRedASR-AED achieves WERs of 1.93\% and 4.44\% on the respective test sets.
 
+## Discussion
+
+In this section, we explore the reasons why our FireRedASR models outperform competing models.
+We attribute the superior performance to the following three factors:
+
+**High-Quality and Diverse Training Data**: Our training corpus consists predominantly of professionally transcribed audio collected from real-world scenarios, which provides significantly more valuable training signals than traditional reading-style recordings in controlled environments.
+The dataset encompasses extensive variations in acoustic conditions, speakers, accents, and content domains, totaling tens of thousands of hours.
+Such diversity and scale enable our models to learn robust speech representations and linguistic patterns, leading to strong generalization.
+Our empirical studies demonstrate that one thousand hours of high-quality, human-labeled data yields better results than ten thousand hours of weakly-labeled data (e.g., from video captions, OCR results, or ensemble ASR outputs), explaining our advantage over Whisper-like models.
+Moreover, the inclusion of singing data in our corpus contributes to our significant performance improvements over baseline models in handling musical content.
+
+**Optimized Training Strategy**: When scaling FireRedASR-AED from 140M to 1.1B parameters, we identified regularization and learning rate as critical factors affecting model convergence.
+We developed a **Progressive Regularization Training** strategy: initially training without regularization techniques (dropout and SpecAugment \cite{park2019specaugment}) to achieve rapid convergence, then gradually introducing stronger regularization as overfitting tendencies emerge.
+This method enabled successful training of the FireRedASR-AED 1.1B, demonstrating superior outcomes.
+The strategy proved beneficial for smaller models with 732M, 413M, and 140M parameters as well.
+Furthermore, larger models benefit from reduced learning rates, making it crucial to adjust this parameter for optimal performance.
+
+**Efficient ASR Framework**: Our architectural choices were informed by extensive experimentation and prior work.
+While our previous Two-pass Transducer-based model \cite{graves2012sequence,sainath2019two} achieved reasonable performance across various ASR models with millions of parameters, it exhibited scaling limitations and high sensitivity to hyperparameters, with the Prediction Network component prone to overfitting.
+The Transducer approach also imposed significant memory overhead compared to the cross-entropy loss used in FireRedASR.
+Drawing inspiration from recent advances like Whisper while addressing these limitations, we adopted an attention-based encoder-decoder architecture enhanced with our implementations of Conformer and Transformer.
+Furthermore, we incorporated a simple yet effective adapter design inspired by recent works \cite{chu2023qwen,chu2024qwen2,seedasr2024,wu2023decoder,rubenstein2023audiopalm,li2023prompting,wang2023slm,pan2023cosmic,yu2024connecting,chen2024salm,lakomkin2024end,geng2024unveiling,ma2024embarrassingly}, facilitating efficient model adaptation and research iteration.
+
 ## 6·Conclusions: 结论
